--- a/src/app/ventas/pages/registro/matriculas/matriculas.component.html
+++ b/src/app/ventas/pages/registro/matriculas/matriculas.component.html
@@ -15,7 +15,7 @@
                     <th class="text-center" style="background-color: rgba(62, 235, 88, 0.736);"><small>Fecha Pago</small></th>
                     <th class="text-center" style="background-color: rgba(235, 62, 62, 0.736);"><small>Cuota 1</small></th>
                     <th class="text-center" style="background-color: rgba(235, 62, 62, 0.736);"><small>Estado</small></th>
-                    <th class="text-center"><small>Fecha Pago</small></th>
+                    <th class="text-center" style="background-color: rgba(235, 62, 62, 0.736);"><small>Fecha Pago</small></th>
                     <th class="text-center"><small>Acciones</small></th>
                 </tr>
                 </thead>
