--- a/src/app/academic/pages/alumnos/alumnos.component.html
+++ b/src/app/academic/pages/alumnos/alumnos.component.html
@@ -43,6 +43,7 @@
                                     <th class="text-center">Correo</th>
                                     <th class="text-center">Celular</th>
                                     <th class="text-center">Última Conexión</th>
+                                    <th class="text-center">Acc</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -71,6 +72,15 @@
                                             data-bs-toggle="tooltip" data-bs-placement="right" title="Editar Fecha">
                                             <i class="bi bi-calendar-week"></i>
                                         </a> -->
+                                    </td>
+                                    <td class="text-center">
+                                        <a href="javascript:void(0);" data-bs-toggle="tooltip" data-bs-placement="right" title="Reenviar Acceso Estudiante"
+                                            class="mx-2" (click)="generateCode(valStudent.student.id, valStudent)">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-envelope-exclamation" viewBox="0 0 16 16">
+                                                <path d="M2 2a2 2 0 0 0-2 2v8.01A2 2 0 0 0 2 14h5.5a.5.5 0 0 0 0-1H2a1 1 0 0 1-.966-.741l5.64-3.471L8 9.583l7-4.2V8.5a.5.5 0 0 0 1 0V4a2 2 0 0 0-2-2H2Zm3.708 6.208L1 11.105V5.383l4.708 2.825ZM1 4.217V4a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v.217l-7 4.2-7-4.2Z"/>
+                                                <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7Zm.5-5v1.5a.5.5 0 0 1-1 0V11a.5.5 0 0 1 1 0Zm0 3a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0Z"/>
+                                            </svg>
+                                        </a>
                                     </td>
                                 </tr>
                                 </tbody>
