--- a/src/app/auth/form-pay-matricula/form-pay-matricula.component.html
+++ b/src/app/auth/form-pay-matricula/form-pay-matricula.component.html
@@ -64,7 +64,7 @@
                                                                 <i class="bi bi-phone"></i> {{vendedor.detail_user.telefono}} <br>
                                                                 <!-- <i class="bi bi-envelope"></i> {{vendedor.detail_user.email}} -->
                                                             </p>
-                                                            <p class="text-primary">VENDEDOR@</p>
+                                                            <p class="text-primary">Asesor@ Comercial</p>
                                                             <!-- <span class="tag bg-primary">Vendedor</span> -->
                                                         </div>
                                                         <div class="col-12 col-md-6 col-lg-6 col-xl-7 border-left-dashed" *ngIf="data">
