--- a/src/app/shared/components/exam/modal-expired/modal-expired.component.html
+++ b/src/app/shared/components/exam/modal-expired/modal-expired.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="modal-body text-center">
-            <h3>TU EXÁMEN A SIDO EXPIRADO</h3>
+            <h3 class="text-uppercase">Tu examen ha sido expirado</h3>
         </div>
     </div>
 </div>
