--- a/src/app/ventas/pages/alumnos/alumnos.component.html
+++ b/src/app/ventas/pages/alumnos/alumnos.component.html
@@ -33,6 +33,7 @@
                                 <tr class="text-center">
                                     <th>Nº</th>
                                     <th>Estudiante</th>
+                                    <th>N° Documento</th>
                                     <th>Diplomado</th>
                                     <th>Estado</th>
                                     <th>Monto</th>
@@ -46,6 +47,7 @@
                                 <tr *ngFor="let valregistro of registro, index as id">
                                     <td>{{id+1}}</td>
                                     <td>{{valregistro.name_student}} {{valregistro.lastname_student}}</td>
+                                    <td>{{valregistro.dni_student}}</td>
                                     <td class="text-center">{{valregistro.course_name}}</td>
                                     <td class="text-center">
                                         <a href="javascript:void(0);" class="text-success">
