--- a/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/src/app/shared/layout/sidebar/sidebar.component.html
@@ -59,6 +59,7 @@
                         </div>
                     </div>
                     <li class="nav-item" *ngIf="rol=='is_seller'&&userName=='SANDRA MARIA'">
+                    <!-- <li class="nav-item"> -->
                         <a class="nav-link" aria-current="page" routerLink="/ventas/control-leads" routerLinkActive="active" (click)="menuclose()">
                             <div class="avatar avatar-40 icon text-light"><i class="bi bi-book"></i></div>
                             <div class="col text-light">Control Leads</div>
