fechas pago fixed

--- a/src/app/academic/pages/fecha-pago/fecha-pago.component.html
+++ b/src/app/academic/pages/fecha-pago/fecha-pago.component.html
@@ -58,7 +58,7 @@
                                     <div class="col-sm-12 col-md-12 col-lg-12 my-2 text-center">
                                         <p>
                                             <a href="javascript:void(0)" class="text-dark" (click)="changeFecha(data,i)">
-                                                <i class="bi bi-calendar"></i> {{data.fecha_vencimiento*1000 |  date:'dd/MM/yyyy h:mm a'}}
+                                                <i class="bi bi-calendar"></i> {{data.fecha_vencimiento*1000 |  date:'dd/MM/yyyy HH:mm'}}
                                             </a>
                                         </p>
                                     </div>
