--- a/src/app/ventas/pages/registro/leads/leads.component.html
+++ b/src/app/ventas/pages/registro/leads/leads.component.html
@@ -32,16 +32,16 @@
                 {{rowIndex+1}}
             </ng-template>
             <ng-template #is_tipo let-data="adtData" let-emitter="captureEvents">
-              <p>
-                <i class="bi bi-info-circle text-info rounded" *ngIf="data.historial_seguimiento.data.length>0&&data.historial_seguimiento.data[0].tipo_seguimiento=='informacion'"></i>
-                <i class="bi bi-person-dash text-danger rounded mx-1" *ngIf="data.historial_seguimiento.data.length>0&&data.historial_seguimiento.data[0].tipo_seguimiento=='no_interesado'"></i>
-                <i class="bi bi-telephone-x text-warning rounded" *ngIf="data.historial_seguimiento.data.length>0&&data.historial_seguimiento.data[0].tipo_seguimiento=='no_contesta'"></i>
-                <i class="bi bi-person-workspace text-dark rounded mx-1" *ngIf="data.historial_seguimiento.data.length>0&&data.historial_seguimiento.data[0].tipo_seguimiento=='proximo_grupo'"></i>
-                <i class="bi bi-cash-coin text-success rounded" *ngIf="data.historial_seguimiento.data.length>0&&data.historial_seguimiento.data[0].tipo_seguimiento=='compromiso_pago'"></i>
-                <!-- <i class="bi bi-info-circle text-danger rounded parpadea" *ngIf="data.seguimiento.informacion.length>0||
-                data.seguimiento.no_contesta.length>0||data.seguimiento.no_interesado.length>0||data.seguimiento.proximo_grupo.length>0"></i> -->
-                {{data.alumno}}
-              </p>
+                <p class="d-flex">
+                    <b *ngFor="let valData of data.historial_seguimiento.data" class="mx-1">
+                        <i class="bi bi-info-circle text-info rounded" *ngIf="valData.tipo_seguimiento=='informacion'"></i>
+                        <i class="bi bi-person-dash text-danger rounded mx-1" *ngIf="valData.tipo_seguimiento=='no_interesado'"></i>
+                        <i class="bi bi-telephone-x text-warning rounded" *ngIf="valData.tipo_seguimiento=='no_contesta'"></i>
+                        <i class="bi bi-person-workspace text-dark rounded mx-1" *ngIf="valData.tipo_seguimiento=='proximo_grupo'"></i>
+                        <i class="bi bi-cash-coin text-success rounded" *ngIf="valData.tipo_seguimiento=='compromiso_pago'"></i>
+                    </b>
+                    {{data.alumno}}
+                </p>
             </ng-template>
             <ng-template #is_celular let-data="adtData" let-emitter="captureEvents">
                 <a href="https://wa.me/51{{data.telefono}}" target="_blank" class="">
@@ -49,15 +49,17 @@
                 </a>
             </ng-template>
             <ng-template #is_fechaModificacion let-data="adtData" let-emitter="captureEvents">
-                <p>
-                  <i class="bi bi-info-circle text-info rounded" *ngIf="data.historial_seguimiento.data.length>0&&data.historial_seguimiento.data[0].tipo_seguimiento=='informacion'"></i>
-                  <i class="bi bi-person-dash text-danger rounded mx-1" *ngIf="data.historial_seguimiento.data.length>0&&data.historial_seguimiento.data[0].tipo_seguimiento=='no_interesado'"></i>
-                  <i class="bi bi-telephone-x text-warning rounded" *ngIf="data.historial_seguimiento.data.length>0&&data.historial_seguimiento.data[0].tipo_seguimiento=='no_contesta'"></i>
-                  <i class="bi bi-person-workspace text-dark rounded mx-1" *ngIf="data.historial_seguimiento.data.length>0&&data.historial_seguimiento.data[0].tipo_seguimiento=='proximo_grupo'"></i>
-                  <i class="bi bi-cash-coin text-success rounded" *ngIf="data.historial_seguimiento.data.length>0&&data.historial_seguimiento.data[0].tipo_seguimiento=='compromiso_pago'"></i>
-                  <!-- <i class="bi bi-info-circle text-danger rounded parpadea" *ngIf="data.seguimiento.informacion.length>0||
-                  data.seguimiento.no_contesta.length>0||data.seguimiento.no_interesado.length>0||data.seguimiento.proximo_grupo.length>0"></i> -->
-                  {{data.updated_at}}
+                <p class="d-flex">
+                    <b *ngFor="let valData of data.historial_seguimiento.data" class="mx-1">
+                        <i class="bi bi-info-circle text-info rounded" *ngIf="valData.tipo_seguimiento=='informacion'"></i>
+                        <i class="bi bi-person-dash text-danger rounded mx-1" *ngIf="valData.tipo_seguimiento=='no_interesado'"></i>
+                        <i class="bi bi-telephone-x text-warning rounded" *ngIf="valData.tipo_seguimiento=='no_contesta'"></i>
+                        <i class="bi bi-person-workspace text-dark rounded mx-1" *ngIf="valData.tipo_seguimiento=='proximo_grupo'"></i>
+                        <i class="bi bi-cash-coin text-success rounded" *ngIf="valData.tipo_seguimiento=='compromiso_pago'"></i>
+                    </b>
+                    <!-- <i class="bi bi-info-circle text-danger rounded parpadea" *ngIf="data.seguimiento.informacion.length>0||
+                    data.seguimiento.no_contesta.length>0||data.seguimiento.no_interesado.length>0||data.seguimiento.proximo_grupo.length>0"></i> -->
+                    {{data.updated_at}}
                 </p>
             </ng-template>
             <ng-template #dtActions let-data="adtData" let-emitter="captureEvents">
