--- a/src/app/shared/layout/content/content.component.html
+++ b/src/app/shared/layout/content/content.component.html
@@ -7,7 +7,7 @@
 <!-- background ends  -->
 
 <!-- Header -->
-<app-header #HeaderEl class="header d-block position-fixed fixed-top top-0 start-0" style="background: linear-gradient(90deg, rgba(0,68,148,1) 0%, rgba(0,113,198,1) 50%, rgba(0,68,148,1) 100%) !important;border-bottom: 1px solid white;"></app-header>
+<app-header [show]="url" #HeaderEl class="header d-block position-fixed fixed-top top-0 start-0" style="background: linear-gradient(90deg, rgba(0,68,148,1) 0%, rgba(0,113,198,1) 50%, rgba(0,68,148,1) 100%) !important;border-bottom: 1px solid white;"></app-header>
 <!-- Header ends -->
 
 <!-- Sidebar -->
