--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -602,7 +602,7 @@
         </div> -->
         <div class="ms-auto">
             <div class="row">
-                <div class="col-auto align-self-center px-0 d-none d-xxxl-block" *ngIf="grupo&&grupo.length>1">
+                <div class="col-auto" *ngIf="grupo&&grupo.length>1">
                     <form [formGroup]="formGroup">
                       <div class="col-lg-12 col-md-12 col-sm-12">
                         <ng-select class="text-uppercase"
