--- a/src/app/alumno/pages/academico/academico.component.html
+++ b/src/app/alumno/pages/academico/academico.component.html
@@ -15,7 +15,7 @@ allowfullscreen="allowfullscreen" allow="autoplay"></iframe> -->
         <div class="card border-0 mb-4">
             <div class="row h-100 mx-0">
                 <a href="javascript:void(0)" routerLink="/alumno/academico/{{courses.course.courses_code}}" class="col-sm-12 col-md-6 col-lg-6 py-3 position-relative" style="height: 230px !important;">
-                    <div class="coverimg position-absolute start-0 top-0 h-100 w-100 rounded" style="background-image: url({{courses.course.diplomado_name.information.img_banner}});">
+                    <div class="coverimg position-absolute start-0 top-0 h-100 w-100 rounded" style="background-image: url({{courses.course.diplomado_name.information.img_banner}}) !important;">
                         <img src="{{courses.course.diplomado_name.information.img_banner}}" alt="" style="display: none;">
                     </div>
                 </a>
