--- a/src/app/marketing/pages/control-leads/control-leads.component.html
+++ b/src/app/marketing/pages/control-leads/control-leads.component.html
@@ -23,7 +23,7 @@
                             <span class="badge badge-sm bg-green">Compromiso Matrícula</span>
                         </p>
                     </div>
-                    <div class="col-sm-12 col-md-12 col-lg-12">
+                    <div class="col-sm-12 col-md-12 col-lg-12" style="overflow: auto;">
                         <ng-template #idTpl let-rowIndex="rowIndex" let-row="row">
                             {{rowIndex+1}}
                         </ng-template>
